Fixes on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
 	--nontech-tag-color: hsl(76, 49%, 38%);
 }
 
+html {
+  background-color: white;
+}
+
 body {
   margin: 0;
   place-items: start center;
